// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Tag basic 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  min-width: min-content;
  flex: 0 0 auto;
  border-radius: 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span
        class="textRecipe_size_medium"
      >
        <span
          class="textRecipe_size_medium"
        >
           
          Name
        </span>
        <span
          class="textRecipe_size_medium"
        >
           : 
        </span>
        <span
          class="textRecipe_size_medium"
          style="font-weight: 600;"
        >
          Value
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag basic outside grommet wrapper 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  min-width: min-content;
  flex: 0 0 auto;
  border-radius: 48px;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

@media only screen and (max-width: 768px) {
  .c0 {
    border: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c0 {
    border-radius: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      class="textRecipe_size_medium"
    >
      <span
        class="textRecipe_size_medium"
      >
         
        Name
      </span>
      <span
        class="textRecipe_size_medium"
      >
         : 
      </span>
      <span
        class="textRecipe_size_medium"
        style="font-weight: 600;"
      >
        Value
      </span>
    </span>
  </div>
</div>
`;

exports[`Tag onClick 1`] = `
.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c1 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c1:focus:not(:focus-visible) >circle,
.c1:focus:not(:focus-visible) >ellipse,
.c1:focus:not(:focus-visible) >line,
.c1:focus:not(:focus-visible) >path,
.c1:focus:not(:focus-visible) >polygon,
.c1:focus:not(:focus-visible) >polyline,
.c1:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c1:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  border: solid 1px rgba(0, 0, 0, 0.33);
  border-radius: 48px;
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 24px;
  }
}

<div
  class="c0"
>
  <button
    class="c1 c2"
    type="button"
  >
    <div
      class="c3"
    >
      <span
        class="textRecipe_size_medium"
      >
        <span
          class="textRecipe_size_medium"
          style="font-weight: 600;"
        >
          Test
        </span>
      </span>
    </div>
  </button>
</div>
`;

exports[`Tag onRemove 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  min-width: min-content;
  flex: 0 0 auto;
  border-radius: 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  margin-right: 6px;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  border-radius: 48px;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    border-radius: 24px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span
        class="textRecipe_size_medium"
      >
        <span
          class="textRecipe_size_medium"
          style="font-weight: 600;"
        >
          Test
        </span>
      </span>
    </div>
    <button
      aria-label="Remove Test"
      class="c3 c4"
      type="button"
    >
      <svg
        aria-label="FormClose"
        class="c5"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 7 10 10M7 17 17 7"
          fill="none"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Tag renders custom remove button kind and size 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  min-width: min-content;
  flex: 0 0 auto;
  border-radius: 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 18px;
  padding-right: 18px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #444444;
  stroke: #444444;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c8 {
  display: inline-block;
  flex: 0 0 auto;
  width: 30px;
  height: 30px;
  fill: #444444;
  stroke: #444444;
}

.c8 g {
  fill: inherit;
  stroke: inherit;
}

.c8 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c8 *[stroke*='#'],
.c8 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c8 *[fill-rule],
.c8 *[FILL-RULE],
.c8 *[fill*='#'],
.c8 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c11 {
  display: inline-block;
  flex: 0 0 auto;
  width: 36px;
  height: 36px;
  fill: #444444;
  stroke: #444444;
}

.c11 g {
  fill: inherit;
  stroke: inherit;
}

.c11 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c11 *[stroke*='#'],
.c11 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c11 *[fill-rule],
.c11 *[FILL-RULE],
.c11 *[fill*='#'],
.c11 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  margin: 12px;
  border: none;
  border-radius: 18px;
  padding: 4px 20px;
  font-size: 14px;
  line-height: 0;
  background: blue;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c7 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  margin-left: 18px;
  margin-right: 18px;
  margin-top: 12px;
  margin-bottom: 12px;
  border: none;
  border-radius: 18px;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 0;
  background: blue;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c7 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c7:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c7:focus >circle,
.c7:focus >ellipse,
.c7:focus >line,
.c7:focus >path,
.c7:focus >polygon,
.c7:focus >polyline,
.c7:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c7:focus ::-moz-focus-inner {
  border: 0;
}

.c7:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c7:focus:not(:focus-visible) >circle,
.c7:focus:not(:focus-visible) >ellipse,
.c7:focus:not(:focus-visible) >line,
.c7:focus:not(:focus-visible) >path,
.c7:focus:not(:focus-visible) >polygon,
.c7:focus:not(:focus-visible) >polyline,
.c7:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c7:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c10 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  margin: 10px;
  border: none;
  border-radius: 24px;
  padding: 8px 32px;
  font-size: 22px;
  line-height: 0;
  background: blue;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c10 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c10:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus >circle,
.c10:focus >ellipse,
.c10:focus >line,
.c10:focus >path,
.c10:focus >polygon,
.c10:focus >polyline,
.c10:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus ::-moz-focus-inner {
  border: 0;
}

.c10:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) >circle,
.c10:focus:not(:focus-visible) >ellipse,
.c10:focus:not(:focus-visible) >line,
.c10:focus:not(:focus-visible) >path,
.c10:focus:not(:focus-visible) >polygon,
.c10:focus:not(:focus-visible) >polyline,
.c10:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  border-radius: 48px;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    padding-left: 18px;
    padding-right: 18px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    border-radius: 24px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="textRecipe_size_medium"
        >
          <span
            class="textRecipe_size_medium"
            style="font-weight: 600;"
          >
            Value
          </span>
        </span>
      </div>
      <button
        aria-label="Remove Value"
        class="c3 c4"
        type="button"
      >
        <svg
          aria-label="FormClose"
          class="c5"
          viewBox="0 0 24 24"
        >
          <path
            d="m7 7 10 10M7 17 17 7"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="textRecipe_size_medium"
        >
          <span
            class="textRecipe_size_medium"
            style="font-weight: 600;"
          >
            Value
          </span>
        </span>
      </div>
      <button
        aria-label="Remove Value"
        class="c3 c4"
        type="button"
      >
        <svg
          aria-label="FormClose"
          class="c5"
          viewBox="0 0 24 24"
        >
          <path
            d="m7 7 10 10M7 17 17 7"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <div
      class="c1"
    >
      <div
        class="c6"
      >
        <span
          class="textRecipe_size_large"
        >
          <span
            class="textRecipe_size_large"
            style="font-weight: 600;"
          >
            Value
          </span>
        </span>
      </div>
      <button
        aria-label="Remove Value"
        class="c7 c4"
        type="button"
      >
        <svg
          aria-label="FormClose"
          class="c8"
          viewBox="0 0 24 24"
        >
          <path
            d="m7 7 10 10M7 17 17 7"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <div
      class="c1"
    >
      <div
        class="c9"
      >
        <span
          class="textRecipe_size_xlarge"
        >
          <span
            class="textRecipe_size_xlarge"
            style="font-weight: 600;"
          >
            Value
          </span>
        </span>
      </div>
      <button
        aria-label="Remove Value"
        class="c10 c4"
        type="button"
      >
        <svg
          aria-label="FormClose"
          class="c11"
          viewBox="0 0 24 24"
        >
          <path
            d="m7 7 10 10M7 17 17 7"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tag renders custom remove icon 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  min-width: min-content;
  flex: 0 0 auto;
  border-radius: 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  margin-right: 6px;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
}

.c3:hover {
  background-color: rgba(221, 221, 221, 0.4);
  color: #000000;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  border-radius: 48px;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    border-radius: 24px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span
        class="textRecipe_size_medium"
      >
        <span
          class="textRecipe_size_medium"
          style="font-weight: 600;"
        >
          Value
        </span>
      </span>
    </div>
    <button
      aria-label="Remove Value"
      class="c3 c4"
      type="button"
    >
      <svg
        data-testid="custom-remove-icon"
      />
    </button>
  </div>
</div>
`;

exports[`Tag renders default remove icon 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  min-width: min-content;
  flex: 0 0 auto;
  border-radius: 48px;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  margin-right: 6px;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
}

.c2:hover {
  background-color: rgba(221, 221, 221, 0.4);
  color: #000000;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c2:focus:not(:focus-visible) >circle,
.c2:focus:not(:focus-visible) >ellipse,
.c2:focus:not(:focus-visible) >line,
.c2:focus:not(:focus-visible) >path,
.c2:focus:not(:focus-visible) >polygon,
.c2:focus:not(:focus-visible) >polyline,
.c2:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c2:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c3 {
  border-radius: 48px;
}

@media only screen and (max-width: 768px) {
  .c0 {
    border: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c0 {
    border-radius: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    border-radius: 24px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="textRecipe_size_medium"
      >
        <span
          class="textRecipe_size_medium"
          style="font-weight: 600;"
        >
          Value
        </span>
      </span>
    </div>
    <button
      aria-label="Remove Value"
      class="c2 c3"
      type="button"
    >
      <svg
        aria-label="FormClose"
        class="c4"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 7 10 10M7 17 17 7"
          fill="none"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Tag size 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  min-width: min-content;
  flex: 0 0 auto;
  border-radius: 48px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 3px;
  padding-bottom: 3px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 9.600000000000001px;
  padding-right: 9.600000000000001px;
  padding-top: 3px;
  padding-bottom: 3px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 18px;
  padding-right: 18px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 2px;
    padding-bottom: 2px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 9.600000000000001px;
    padding-right: 9.600000000000001px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-top: 2px;
    padding-bottom: 2px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    padding-left: 18px;
    padding-right: 18px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span
        class="textRecipe_size_xsmall"
      >
        <span
          class="textRecipe_size_xsmall"
        >
           
          Name
        </span>
        <span
          class="textRecipe_size_xsmall"
        >
           : 
        </span>
        <span
          class="textRecipe_size_xsmall"
          style="font-weight: 600;"
        >
          Value
        </span>
      </span>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c3"
    >
      <span
        class="textRecipe_size_small"
      >
        <span
          class="textRecipe_size_small"
        >
           
          Name
        </span>
        <span
          class="textRecipe_size_small"
        >
           : 
        </span>
        <span
          class="textRecipe_size_small"
          style="font-weight: 600;"
        >
          Value
        </span>
      </span>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c4"
    >
      <span
        class="textRecipe_size_medium"
      >
        <span
          class="textRecipe_size_medium"
        >
           
          Name
        </span>
        <span
          class="textRecipe_size_medium"
        >
           : 
        </span>
        <span
          class="textRecipe_size_medium"
          style="font-weight: 600;"
        >
          Value
        </span>
      </span>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c5"
    >
      <span
        class="textRecipe_size_large"
      >
        <span
          class="textRecipe_size_large"
        >
           
          Name
        </span>
        <span
          class="textRecipe_size_large"
        >
           : 
        </span>
        <span
          class="textRecipe_size_large"
          style="font-weight: 600;"
        >
          Value
        </span>
      </span>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c6"
    >
      <span
        class="textRecipe_size_xlarge"
      >
        <span
          class="textRecipe_size_xlarge"
        >
           
          Name
        </span>
        <span
          class="textRecipe_size_xlarge"
        >
           : 
        </span>
        <span
          class="textRecipe_size_xlarge"
          style="font-weight: 600;"
        >
          Value
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag theme border and hover background/border 1`] = `
.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: min-content;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c1 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c1:hover {
  background-color: rgba(221, 221, 221, 0.4);
  color: #000000;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c1:focus:not(:focus-visible) >circle,
.c1:focus:not(:focus-visible) >ellipse,
.c1:focus:not(:focus-visible) >line,
.c1:focus:not(:focus-visible) >path,
.c1:focus:not(:focus-visible) >polygon,
.c1:focus:not(:focus-visible) >polyline,
.c1:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c1:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 18px;
  line-height: 24px;
  background-color: #ffffff;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  background-color: #ffffff;
  color: #444444;
  border: solid 1px rgba(0, 0, 0, 0.33);
  border-radius: 48px;
}

.c2:hover {
  background: pink;
  border: solid 1px green;
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c2:hover {
    border: solid 1px green;
  }
}

<div
  class="c0"
>
  <button
    class="c1 c2"
    type="button"
  >
    <div
      class="c3"
    >
      <span
        class="textRecipe_size_medium"
      >
        <span
          class="textRecipe_size_medium"
          style="font-weight: 600;"
        >
          Hover me
        </span>
      </span>
    </div>
  </button>
</div>
`;
